compiler/testData/diagnostics/tests/Abstract.kt
package MyPackage

fun test(<!UNUSED_PARAMETER!>x<!>: Int,) {

}